--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -26,8 +26,8 @@
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'sair' %}">
-                            <i class="bi bi-door-open-fill me-1"></i>Sair
+                        <a class="nav-link" href="{% url 'sair' %}" data-bs-tt="tooltip" title="Sair">
+                            <i class="bi bi-door-open-fill me-1"></i>
                         </a>             
                     </li>
                 </ul>
