--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,10 @@
         {% include "partials/header.html" %}
         {% block 'conteudo' %}{% endblock %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        <script>
+            const tooltipTriggerList = document.querySelectorAll('[data-bs-tt="tooltip"]')
+            const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+        </script>
         {% block 'script' %}{% endblock  %}
     </body>
 </html>
