--- a/apostilas/templates/adicionar_apostilas.html
+++ b/apostilas/templates/adicionar_apostilas.html
@@ -4,31 +4,23 @@
 {% block 'titulo' %}Adicionar apostilas{% endblock  %}
 
 {% block 'cabecalho' %}
-
     <link href="{% static 'usuarios/css/cadastro.css' %}" rel="stylesheet">
     <link href="{% static 'flashcard/css/novo_flashcard.css' %}" rel="stylesheet">
     <link href="{% static 'flashcard/css/iniciar_desafio.css' %}" rel="stylesheet">
     <link href="{% static 'flashcard/css/desafio.css' %}" rel="stylesheet">
     <link href="{% static 'apostilas/css/adicionar.css' %}" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
 {% endblock 'cabecalho' %}
 
 {% block 'conteudo' %}
 
     <div class="container">
 
-        <div class="row gap-4 my-5">
+        <div class="row gap-5 my-5">
             <div class="col-md">
-                <div class="box-form mt-0">
-                    <p class="fs-3 fw-bold">Adicionar resumos</p>
-                    {% if messages %}
-                        {% for message in messages %}
-                            <section class="alert {{message.tags}} tac py-1 mb-3">
-                                {{message}}
-                            </section>
-                        {% endfor %}
-                    {% endif %}
+                <div class="box-form mt-0 mb-5">
+                    <p class="fs-3 fw-bold">Adicionar apostilas</p>
+                    {% include "partials/messages.html" %}
                     <form action="{% url "adicionar_apostilas" %}" method="POST" enctype='multipart/form-data'>{% csrf_token %}
                         <div class="mb-3">
                             <label>Titulo</label>
@@ -45,38 +37,43 @@
                         <input type="submit" class="btn-cadastro bsm" value="Salvar">
                     </form>
                 </div>
+                <hr>
+                <div class="col-md mt-4">
+                    <p class="fs-3 fw-bold">Buscar apostilas</p>
+                    <form action="{% url "adicionar_apostilas" %}" method="GET"> 
+                        <input type="text" name="tags-busca" class="form-control mb-4" placeholder="Informe as tags separadas por ; (ponto e vírgula)" value="{{tags_busca}}">
+                        <input type="submit" class="btn-cadastro bsm text-black text-decoration-none" value="Buscar">
+                        <a href="{% url "adicionar_apostilas" %}" class="btn-cadastro btn-table py-2 ms-4">Desfazer filtro</a>
+                    </form>
+                </div>
             </div>
             <div class="col-md">
-                <p class="fs-3 fw-bold">Buscar resumos</p>
-                <form action="{% url "adicionar_apostilas" %}" method="GET"> 
-                    <input type="text" name="tags-busca" class="form-control mb-4" placeholder="Informe as tags separadas por ; (ponto e vírgula)">
-                    <input type="submit" class="btn-cadastro bsm text-black text-decoration-none" value="Buscar">
-                    <a href="{% url "adicionar_apostilas" %}" class="btn-cadastro btn-table py-2 ms-4">Desfazer filtro</a>
-                </form>
+                <div class="row">
+                    <p class="fonte-secundaria">Views totais: {{views_totais}}</p>
+                    {% if apostilas %}
+                        <table class="">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Titulo</th>
+                                    <th scope="col">Ação</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for apostila in apostilas %}
+                                    <tr class="linha">
+                                        <td>{{apostila.titulo}}</td>
+                                        <td>
+                                            <a href="{% url "apostila" apostila.id %}" class="btn-cadastro btn-table">Abrir</a>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    {% else %}
+                        <p class="fonte-p text-info">Nenhuma apostila cadastrada ou encontrada!</p>
+                    {% endif %}
+                </div>
             </div>
-        </div>
-        <hr>
-        <div class="row mt-4">
-            <p class="fonte-secundaria">Views totais: {{views_totais}}</p>
-            <table class="">
-                <thead>
-                    <tr>
-                        <th scope="col">Titulo</th>
-                        <th scope="col">Ação</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for apostila in apostilas %}
-                        <tr class="linha">
-                            <td>{{apostila.titulo}}</td>
-                            <td>
-                                <a href="{% url "apostila" apostila.id %}" class="btn-cadastro btn-table">Abrir</a>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-            
         </div>
     </div>
 
